karnc/tests/fixtures/positive/97_simple_cross_context_call/src/commerce/payment.karn
context commerce.payment

service authorise {
  on call(amount: Int) -> Effect[Result[Int, Int]] {
    Effect.pure(Ok(amount))
  }
}
