karnc/tests/fixtures/negative/80_structural_mismatch/src/commerce/orders.karn
context commerce.orders

consumes commerce.payment as Payment

type LocalAmount = {
  pence:    Int,
  iso:      String,
}

service placeOrder {
  on call(value: LocalAmount) -> Effect[Result[Int, Int]] {
    let _ <- Payment.authorise(value)
    Effect.pure(Ok(0))
  }
}
